# Beavr

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  ai_investor.py  autonomous_agent.py  pyproject.toml  run_ai_investor.py
.github/: copilot-instructions.md
.github/instructions/: agents.instructions.md  cli.instructions.md  models.instructions.md  strategies.instructions.md  tests.instructions.md
config/: ai_investor_v2.toml
docs/: AI Investor Systems_ Multi-Agent Architectures and Performance Review.docx  AI_INVESTOR_MVP.md  AI_INVESTOR_V2_TASKS.md  CONFIGURATION.md  IMPLEMENTATION.md  MVP.md  MVP_TASKS.md  PRODUCT_SPEC.md  QUICKSTART.md  SPEC_AUTO_CONSOLIDATION.md  STRATEGIES.md  SWING_REVERSAL_ALGORITHM.md  TASK_TRACKING.md  WEBULL_IMPLEMENTATION_TASKS.md  WEBULL_INTEGRATION.md
docs/ai_investor/: ADR.md  ARCHITECTURE.md  CHATGPT_PLAN.md  IMPLEMENTATION.md  README.md  RESEARCH.md  SME_RESPONSE.md  V2_ARCHITECTURE.md
examples/strategies/: ai_multi_agent.toml  dip_buy_dca.toml  simple_dca.toml
logs/ai_investor/: auto_state.json  v2_state.json
logs/autonomous/: state.json  trades.jsonl
logs/dd_reports/2026-02-05/: GOOGL_20260205_084157.md
logs/dd_reports/latest/: GOOGL.json
src/beavr/: __init__.py  paper_trading.py
src/beavr/agents/: __init__.py  base.py  dd_agent.py  earnings_agent.py  indicators.py  market_analyst.py  morning_scanner.py  news_monitor.py  position_manager.py  swing_trader.py  symbol_selector.py  thesis_generator.py  trade_executor.py
src/beavr/backtest/: __init__.py  engine.py  hf_engine.py  metrics.py  portfolio.py
src/beavr/broker/: __init__.py  factory.py  models.py  protocols.py
src/beavr/broker/alpaca/: __init__.py  broker.py  data.py  news.py  screener.py
src/beavr/broker/webull/: __init__.py  broker.py  data.py  instrument_cache.py
src/beavr/cli/: __init__.py  ai.py  backtest.py  main.py  output.py  portfolio_wizard.py
src/beavr/core/: __init__.py  config.py
src/beavr/data/: __init__.py  alpaca.py  earnings.py  screener.py
src/beavr/db/: __init__.py  ai_positions.py  cache.py  connection.py  dd_reports_repo.py  events_repo.py  factory.py  protocols.py  results.py  schema.py  schema_v2.py  thesis_repo.py
src/beavr/db/sqlite/: __init__.py  bar_cache_store.py  connection.py  dd_report_store.py  event_store.py  portfolio_store.py  position_store.py  schema.py  schema_v2.py  thesis_store.py
src/beavr/llm/: __init__.py  client.py  usage.py
src/beavr/models/: __init__.py  bar.py  config.py  dd_report.py  market_event.py  morning_candidate.py  portfolio.py  portfolio_record.py  signal.py  thesis.py  trade.py
src/beavr/orchestrator/: __init__.py  blackboard.py  engine.py  portfolio_config.py  v2_engine.py
src/beavr/strategies/: __init__.py  base.py  buy_and_hold.py  context.py  dip_buy_dca.py  registry.py  simple_dca.py
src/beavr/strategies/ai/: __init__.py  multi_agent.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_alpaca_data.py  test_full_backtest.py
tests/integration/broker/: test_alpaca_live.py  test_webull_live.py
tests/unit/: __init__.py  test_alpaca.py  test_audit_trail.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_portfolio.py  test_cache.py  test_cli_ai_v2_commands.py  test_config.py  test_database.py  test_earnings.py  test_llm_usage.py  test_models.py  test_models_v2.py  test_orchestrator_v2.py  test_package.py  test_portfolio_config.py  test_portfolio_store.py  test_portfolio_wizard.py  test_results.py  test_store_protocols.py  test_strategy_base.py  test_strategy_dip_buy_dca.py  test_strategy_registry.py  test_strategy_simple_dca.py
tests/unit/broker/: __init__.py  conftest.py  test_alpaca_broker.py  test_alpaca_data.py  test_alpaca_news.py  test_alpaca_screener.py  test_factory.py  test_instrument_cache.py  test_models.py  test_protocol_conformance.py  test_webull_broker.py  test_webull_data.py
