[project]
name = "beavr"
version = "0.1.0"
description = "Auto Trading Platform for retail investors"
authors = [
    {name = "Beavr Team", email = "team@beavr.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["trading", "algorithmic-trading", "backtesting", "dca", "alpaca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "alpaca-py>=0.43",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
]
webull = [
    "webull-python-sdk-core",
    "webull-python-sdk-trade",
    "webull-python-sdk-mdata",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
]
earnings = [
    "yfinance>=0.2.0",
    "requests>=2.28",
]
all = [
    "beavr[ai,dev,webull,earnings]",
]

[project.scripts]
bvr = "beavr.cli.main:app"
bvr-paper = "beavr.paper_trading:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beavr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=beavr --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[tool.coverage.run]
source = ["src/beavr"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 0

[[tool.mypy.overrides]]
module = [
    "alpaca.*",
    "pandas.*",
    "webullsdkcore.*",
    "webullsdktrade.*",
    "webullsdkmdata.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W291",   # trailing whitespace (too noisy until repo-wide formatting pass)
    "W293",   # blank line contains whitespace (too noisy until repo-wide formatting pass)
    "B008",   # do not perform function calls in argument defaults
    "B027",   # empty method in abstract base class without abstract decorator
    "UP006",  # Use dict instead of Dict - causes Python 3.9 issues with Pydantic
    "UP007",  # Use X | Y instead of Union - causes Python 3.9 issues with Pydantic
    "UP035",  # deprecated typing imports - needed for Python 3.9
    "UP045",  # Use X | None instead of Optional - causes Python 3.9 issues with Pydantic
    "SIM103", # return condition directly
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # unused function argument (common in test fixtures)
    "ARG002",  # unused method argument (common in test mocks)
    "B017",    # assert blind exception
]

[tool.ruff.lint.isort]
known-first-party = ["beavr"]
